<resources>
    <string name="app_name">Elib Unikom</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="profile">Profile</string>
    <string name="ilmu_komputer">Ilmu Komputer</string>
    <string name="hot_books">Hot Books</string>
    <string name="recommended_books">Recommended Books</string>
    <string name="view_all">View All</string>
    <string name="program">Program</string>
    <string name="latest_books">Latest Books</string>
    <string name="description">Description</string>
    <string name="information">Information</string>
    <string name="pengarang">Author</string>
    <string name="publisher">Publisher</string>
    <string name="year">Year Published</string>
    <string name="date">Date Uploaded</string>
    <string name="book_detail">Book Detail</string>
    <string name="loading">Loading...</string>
    <string name="whoops">Whoops!</string>
    <string name="no_internet_connection_found">No Internet Connection Found</string>
    <string name="check_your_connection_and_try_again">Check Your Connection And Try Again</string>
    <string name="retry">Retry</string>
    <string name="you_re_not_logged_in">You\'re not logged in...</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="username">Username</string>
    <string name="paasowrd">Password</string>
    <string name="forgotpassword">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_register">Don\'t have account ? Register</string>
    <string name="register">Register</string>
    <string name="account_info">Account Information</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
